--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
     <div id="introduction">
       <div class="socialmedia">
         <a href="https://www.instagram.com/mandar_ur/"
-          ><img src="/img/instagram-removebg-preview.png" alt="" width="50rem"
+          ><img src="img/instagram-removebg-preview.png" alt="" width="50rem"
         /></a>
         <a href="https://www.instagram.com/mandar_ur/"
-          ><img src="/img/facebook-removebg-preview.png" alt="" width="50rem"
+          ><img src="img/facebook-removebg-preview.png" alt="" width="50rem"
         /></a>
         <a href="https://www.instagram.com/mandar_ur/"
-          ><img src="/img/linkden-removebg-preview.png" alt="" width="50rem"
+          ><img src="img/linkden-removebg-preview.png" alt="" width="50rem"
         /></a>
         <a href="https://www.instagram.com/mandar_ur/"
-          ><img src="/img/github5-removebg-preview.png" alt="" width="55rem"
+          ><img src="img/github5-removebg-preview.png" alt="" width="55rem"
         /></a>
         <!-- <img src="/facebook.png" alt="" width="50rem">
           <img src="/linkden.png" alt="" width="50rem">
@@ -54,7 +54,7 @@
       </div>
 
       <div class="mandar">
-        <img src="/img/InShot_20220203_195913438-removebg-preview.png" alt="">
+        <img src="img/InShot_20220203_195913438-removebg-preview.png" alt="">
         <h1>Hii I'am Mandar</h1>
         <h2>WEB Developer</h2>
         <br />
@@ -70,14 +70,14 @@
     <div id="skills">
       <h1>MY SKILL</h1>
       <div class="skillimg">
-        <img src="/img/cdemo3-removebg-preview.png" alt="" />
-        <img src="/img/cpp-removebg-preview.png" alt="" />
-        <img src="/img/html.png" alt="" />
-        <img src="/img/css-removebg-preview.png" alt="" />
-        <img src="/img/js-removebg-preview.png" alt="" />
-        <img src="/img/node_js-removebg-preview.png" alt="" />
-        <img src="/img/mongo_d-removebg-preview.png" alt="" />
-        <img src="/img/postmen-removebg-preview.png" alt="" />
+        <img src="img/cdemo3-removebg-preview.png" alt="" />
+        <img src="img/cpp-removebg-preview.png" alt="" />
+        <img src="img/html.png" alt="" />
+        <img src="img/css-removebg-preview.png" alt="" />
+        <img src="img/js-removebg-preview.png" alt="" />
+        <img src="img/node_js-removebg-preview.png" alt="" />
+        <img src="img/mongo_d-removebg-preview.png" alt="" />
+        <img src="img/postmen-removebg-preview.png" alt="" />
       </div>
     </div>
     <div id="aboutus">
@@ -111,16 +111,16 @@
       <h3> COPYRIGHT Ⓒ  MANDAR KAMBLE(Mandy Dev's)</h3>
       <div class="footersm">
         <a href="instagram/mandar_ur"
-          ><img src="/img/instagram-removebg-preview.png" alt="" width="50rem"
+          ><img src="img/instagram-removebg-preview.png" alt="" width="50rem"
         /></a>
         <a href="instagram/mandar_ur"
-          ><img src="/img/facebook-removebg-preview.png" alt="" width="50rem"
+          ><img src="img/facebook-removebg-preview.png" alt="" width="50rem"
         /></a>
         <a href="instagram/mandar_ur"
-          ><img src="/img/linkden-removebg-preview.png" alt="" width="50rem"
+          ><img src="img/linkden-removebg-preview.png" alt="" width="50rem"
         /></a>
         <a href="instagram/mandar_ur"
-          ><img src="/img/github5-removebg-preview.png" alt="" width="55rem"
+          ><img src="img/github5-removebg-preview.png" alt="" width="55rem"
         /></a>
         
       </div>
