--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="navlist">
         <ul>
           <div id="logo">
-            <img src="img/mandy dev's.png" alt="" />
+            <img src="/mandy dev's.png" alt="" />
           </div>
           <li><a href="#home">HOME</a></li>
           <li><a href="#skills">SKILLS</a></li>
