--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
         2018
       </h3>
     </div>
-
+      <div class="resume">
+      <h1>MY RESUME</h1>
+      <img src="./Black and White Minimalist High School English Teacher Resume.png" alt="">
+    </div>
     <footer id="contactus">
       
       <h2>Mandar Kamble</h2>
