--- a/index.html
+++ b/index.html
@@ -113,16 +113,16 @@
       <br>
       <h3> COPYRIGHT Ⓒ  MANDAR KAMBLE(Mandy Dev's)</h3>
       <div class="footersm">
-        <a href="instagram/mandar_ur"
+        <a href="https://www.instagram.com/mandar_ur/"
           ><img src="img/instagram-removebg-preview.png" alt="" width="50rem"
         /></a>
-        <a href="instagram/mandar_ur"
+        <a href="https://m.facebook.com/mandar.kamble.771"
           ><img src="img/facebook-removebg-preview.png" alt="" width="50rem"
         /></a>
         <a href="instagram/mandar_ur"
           ><img src="img/linkden-removebg-preview.png" alt="" width="50rem"
         /></a>
-        <a href="instagram/mandar_ur"
+        <a href="https://github.com/Mandykamble"
           ><img src="img/github5-removebg-preview.png" alt="" width="55rem"
         /></a>
         
